src/tests/testfiles/unary-operators/types-12.txt
testfiles/unary-operators/types-12.c:2:2: error: lvalue required as increment operand
++5;
^
